# sg-makan-recommender

./: .gitignore  README.md  pyproject.toml  singapore_food.db
backend/: ai_system.py  config.py  database.py  fuzzy_config.json  logging_config.py  main.py  models.py
frontend/: index.html
tests/: conftest.py  test.txt  test_ai_system.py  test_api.py
