[project]
name = "singapore-makan-recommender"
version = "1.0.0"
requires-python = ">=3.9, <3.10"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlmodel",
    "experta",
    "fuzzy_expert",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[tool.setuptools]
packages = ["backend"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I"] # Standard rules: pycodestyle errors/warnings, Pyflakes, isort

[tool.ruff.format]
quote-style = "double"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "ruff>=0.12.3",
]
