[project]
name = "singapore-makan-recommender"
version = "1.0.0"
requires-python = ">=3.9, <3.10"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlmodel",
    "experta",
    "fuzzy_expert",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "ruff>=0.12.3",
    "httpx>=0.28.1",  # Required for FastAPI TestClient
]
